Fix Safari nav alignment bug. Tweak spacing for mobile views

--- a/web/static/css/_blog.scss
+++ b/web/static/css/_blog.scss
@@ -48,6 +48,7 @@ textarea.big-form {
 .blog-index {
   text-align: center;
   list-style-type: none;
+  padding-bottom: 10px;
 
   li {
     margin-bottom: 1.5rem;
